objects/ssot__PromotionChannel__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelId__c</fullName>
        <label>Engagement Channel</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Promotion Channel Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InStoreLocationId__c</fullName>
        <label>In Store Location</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MobileStoreId__c</fullName>
        <label>Mobile Store</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RetailLocationGroupId__c</fullName>
        <label>Retail Location Group</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RetailStoreId__c</fullName>
        <label>Retail Store</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesStoreId__c</fullName>
        <label>Sales Store</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__WebStoreId__c</fullName>
        <label>Web Store</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729831511879_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionChannel_InStoreLocationId_m_rel</label>
        <referenceTo>ssot__InStoreLocation__dlm</referenceTo>
        <relationshipLabel>PromotionChannel_InStoreLocationId_m_rel</relationshipLabel>
        <relationshipName>rel_1729831511879_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729831513314_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionChannel_EngagementChannelId_rel</label>
        <referenceTo>ssot__EngagementChannel__dlm</referenceTo>
        <relationshipLabel>PromotionChannel_EngagementChannelId_rel</relationshipLabel>
        <relationshipName>rel_1729831513314_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659075575_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionChannel_PromotionId_map_Pro_rel</label>
        <referenceTo>ssot__Promotion__dlm</referenceTo>
        <relationshipLabel>PromotionChannel_PromotionId_map_Pro_rel</relationshipLabel>
        <relationshipName>rel_1731659075575_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>